--- a/networks-starting-setup/Dockerfile
+++ b/networks-starting-setup/Dockerfile
@@ -4,6 +4,9 @@ WORKDIR /app
 
 COPY package.json .
 
+# This is to avoid SSL error while installing npm packages
+RUN npm config set strict-ssl false
+
 RUN npm install
 
 COPY . /app
