--- a/PHP_laravel/docker-compose.yaml
+++ b/PHP_laravel/docker-compose.yaml
@@ -1,10 +1,11 @@
-services: 
+services:
   server:
-    image: 'nginx:stable-alpine'
-    ports: 
-      - '8000:80'
-    volumes: 
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    image: "nginx:stable-alpine"
+    ports:
+      - "8000:80"
+    volumes:
+      - ./src:/var/www/html # this is the new line that was added.
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro 
   php:
     build:
       context: ./dockerfiles
