--- a/PHP_laravel/docker-compose.yaml
+++ b/PHP_laravel/docker-compose.yaml
@@ -6,6 +6,9 @@ services:
     volumes:
       - ./src:/var/www/html # this is the new line that was added.
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro 
+    depends_on:
+      - php
+      - mysql
   php:
     build:
       context: ./dockerfiles
