--- a/PHP_laravel/docker-compose.yaml
+++ b/PHP_laravel/docker-compose.yaml
@@ -29,5 +29,16 @@ services:
       dockerfile: composer.dockerfile
     volumes:
       - ./src:/var/www/html
-  # artisan:
-  # npm:
+  artisan:
+    build:
+      context: ./dockerfiles
+      dockerfile: php.dockerfile # this is the same dockerfile as the php service, cuz it uses the same image + commands
+    volumes:
+      - ./src:/var/www/html
+    entrypoint: ["php", "/var/www/html/artisan"]
+  npm:
+    build: node:latest
+    working_dir: /var/www/html # we set it here instead of the Dockerfile(just to show it can be done here too)
+    entrypoint: ["npm"]
+    volumes:
+      - ./src:/var/www/htmlb 
