--- a/PHP_laravel/docker-compose.yaml
+++ b/PHP_laravel/docker-compose.yaml
@@ -41,4 +41,4 @@ services:
     working_dir: /var/www/html # we set it here instead of the Dockerfile(just to show it can be done here too)
     entrypoint: ["npm"]
     volumes:
-      - ./src:/var/www/htmlb 
+      - ./src:/var/www/html
