--- a/PHP_laravel/docker-compose.yaml
+++ b/PHP_laravel/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   server:
-    container_name: server
+    container_name: ngnixContainer
     image: "nginx:stable-alpine"
     ports:
       - "8000:80"
@@ -11,25 +11,27 @@ services:
       - php
       - mysql
   php:
+    container_name: phpContainer
     build:
       context: ./dockerfiles
       dockerfile: php.dockerfile
-    container_name: php
     volumes:
       - ./src:/var/www/html:delegated
 
   mysql:
-    container_name: mysql
+    container_name: mysqlContainer
     image: mysql
     env_file:
       - ./env/mysql.env
   composer:
+    container_name: composerContainer
     build:
       context: ./dockerfiles
       dockerfile: composer.dockerfile
     volumes:
       - ./src:/var/www/html
   artisan:
+    container_name: artisanContainer
     build:
       context: ./dockerfiles
       dockerfile: php.dockerfile # this is the same dockerfile as the php service, cuz it uses the same image + commands
@@ -37,6 +39,7 @@ services:
       - ./src:/var/www/html
     entrypoint: ["php", "/var/www/html/artisan"]
   npm:
+    container_name: npmContainer
     image: node:latest
     working_dir: /var/www/html # we set it here instead of the Dockerfile(just to show it can be done here too)
     entrypoint: ["npm"]
