--- a/PHP_laravel/nginx/nginx.conf
+++ b/PHP_laravel/nginx/nginx.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
-    index index.php index.html;
+    index index.php index.html; // on which files to handle the requests.
     server_name localhost;
-    root /var/www/html/public;
+    root /var/www/html/public; // where to look for files to serve.
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -11,7 +11,7 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000; # the container name should be also php
+        fastcgi_pass php:9000; # the container name should be also php (in the docker-compose.yml)
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
