--- a/PHP_laravel/nginx/nginx.conf
+++ b/PHP_laravel/nginx/nginx.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
-    index index.php index.html; // on which files to handle the requests.
+    index index.php index.html; # on which files to handle the requests.
     server_name localhost;
-    root /var/www/html/public; // where to look for files to serve.
+    root /var/www/html/public; # where to look for files to serve.
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
